# machine-learning

./: .gitignore  CHANGELOG.md  Cargo.toml
Notebooks/Hands-On Machine Learning with Scikit-Learn, Keras & TensorFlow/: 1. Life Satisfaction.ipynb
crates/mlrs-algorithm/: Cargo.toml  Datasets
crates/mlrs-algorithm/src/algorithm/: mod.rs
crates/mlrs-algorithm/src/algorithm/regression/: linear.rs  mod.rs
